--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "axios": "^0.21.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "gamedig": "^3.0.8",
+    "rcon-ts": "^1.2.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
