--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cytokine",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +29,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "gamedig": "^3.0.8",
+    "mongoose": "^5.12.4",
     "rcon-ts": "^1.2.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
