--- a/config.json
+++ b/config.json
@@ -5,6 +5,9 @@
     "enabled": true,
     "interval": 15
   },
+  "lobby": {
+    "expiry": 45
+  },
   "lighthouse": {
     "host": "",
     "clientId": "",
